--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
     "react-router-dom": "^6.2.1",
+    "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
