finishing surveys page

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.26.1",
     "chart.js": "^3.5.0",
