--- a/package.json
+++ b/package.json
@@ -8,16 +8,27 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
+    "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "chart.js": "^3.5.0",
     "chartjs-adapter-moment": "^1.0.0",
-    "moment": "^2.29.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.2.1",
     "react-timeprovider": "^2.0.1",
     "react-transition-group": "^4.4.1",
-    "react-use-date": "^0.3.1"
+    "react-validation": "^3.0.7",
+    "sequelize": "^6.19.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
