--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "chart.js": "^3.5.0",
     "chartjs-adapter-moment": "^1.0.0",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
