--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
     "react-router-dom": "^6.2.1",
+    "react-toastify": "^9.0.7",
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
