--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "chart.js": "^3.8.0",
     "chartjs-adapter-moment": "^1.0.0",
+    "flatpickr": "^4.6.13",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
