--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-scripts start"
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.2",
@@ -18,6 +19,7 @@
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "tailwind-merge": "^2.5.5"
   },
