partially working graph

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.9",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.7",
     "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-annotation": "^3.1.0",
     "clsx": "^2.1.1",
     "moment": "^2.29.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
