--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "moment": "^2.29.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.1",
@@ -22,10 +23,10 @@
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^4.0.0",
     "vite": "^6.0.3"
   }
 }
